--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.10.2",
+    "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.10.2",
     "@mantine/next": "^5.10.2",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@types/cookie": "^0.5.1",
+    "cookie": "^0.5.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "sass": "^1.57.1"
   },
   "devDependencies": {
