--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.10.2",
     "@mantine/next": "^5.10.2",
+    "@mantine/notifications": "^5.10.3",
     "@reduxjs/toolkit": "^1.9.2",
+    "@tabler/icons-react": "^2.2.0",
     "@types/cookie": "^0.5.1",
+    "axios": "^1.3.2",
     "cookie": "^0.5.0",
+    "dayjs": "^1.11.7",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
