--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/config/index.ts", "src/pages/api/login.ts", "src/pages/api/logout.ts", "src/pages/api/user.ts", "node_modules/cookie/cookie.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/config/index.ts",
+    "src/pages/api/login.ts",
+    "src/pages/api/logout.ts",
+    "src/pages/api/user.ts",
+    "node_modules/cookie/cookie.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
