--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.10.2",
     "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.10.2",
+    "@mantine/modals": "^5.10.3",
     "@mantine/next": "^5.10.2",
     "@mantine/notifications": "^5.10.3",
     "@reduxjs/toolkit": "^1.9.2",
