--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.10.2",
+    "@mantine/dates": "^5.10.3",
     "@mantine/form": "^5.10.2",
     "@mantine/hooks": "^5.10.2",
     "@mantine/modals": "^5.10.3",
